fix text overflow bug

--- a/src/components/Simulator/App.less
+++ b/src/components/Simulator/App.less
@@ -66,6 +66,12 @@ button:focus {
 
 .mass-table {
   width: 100%;
+  tr {
+    td:nth-of-type(2) {
+      width: 75px;
+      overflow: hidden;
+    }
+  }
 }
 
 .elapsed-time {
